k8s/10-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels: { app: mongodb }
  template:
    metadata:
      labels: { app: mongodb }
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 27017 }]
          args:
            - --bind_ip_all
          volumeMounts:
            - name: data
              mountPath: /data/db
      volumes:
        - name: data
          emptyDir: {} # dev only; use a PVC in real envs
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: demo
spec:
  selector: { app: mongodb }
  ports:
    - port: 27017
      targetPort: 27017
